updated ol, h2, pseudo code on links, and footer & header  :D

--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,17 @@ ul {
     text-align: left;
     display: inline-block
 }
+
+ol {
+    text-align: left;
+    display: inline-block
+
+}
+ 
+a:hover{ 
+color: red
+}
+
+a:visited {
+color: purple
+}
